re-estructurado el footer azul

--- a/index.html
+++ b/index.html
@@ -108,50 +108,42 @@
 		</section>	
 	<!--Pie de Pagina-->
 		<section class="footer-azul">
-			<div class="container text-center">
-				<div class="row">
-					<div class="col">
-						<nav class="nav">
-							<ul class="nav_lista" >
-								<li>
-									<a class="nav_lista_item" href="./index.html">INICIO</a>
-								</li>
-								<li>
-									<a class="nav_lista_item" href="./html/institucion.html">INSTITUCIÓN</a>
-								</li>
-								<li>
-									<a class="nav_lista_item" href="./html/admisiones.html">ADMISIONES</a>
-								</li>
-							</ul>
-						</nav>
-					</div>
-					<div class="col">
-						<div>
-							<iframe class="mapa_footer" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d822.4393026748972!2d-58.91866603866223!3d-34.458310501854854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc9cd2508e71f5%3A0xbd97a64e3bc14c2d!2sInstituto%20Almafuerte%20Primaria%2C%20Instituto%20Almafuerte%20Secundaria%2C%20Instituto%20Nuestra%20Se%C3%B1ora%20de%20F%C3%A1tima%20Secundaria!5e0!3m2!1ses!2sar!4v1681129032522!5m2!1ses!2sar" width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-						</div>
-					</div>
-					<div class="col">
-						<nav class="nav">
-							<ul class="nav_lista">
-								<li>
-									<a class="nav_lista_item" href="./html/contacto.html">CONTACTO</a>
-								</li>
-								<li>
-									<a class="nav_lista_item" href="https://www.facebook.com/search/pages/?q=instituto%20almafuerte&sde=AbpW75ive6444ynNsPN35-ulI0tUrVnwTINieru9Zysq7EssAW9QNdxqgkECMwlGpeN7DPM8LUFBib-VShJrSY3S" target="_blank">NOTICIAS</a>
-								</li>
-								<li>
-									<a class="nav_lista_item" href="https://app.schoology.com/login?destination=home" target="_blank">SCHOOLOGY</a>
-								</li>
-							</ul>
-				  		</nav>
-					</div>
+			<div class="footer-container">
+				<div class="footer-container-columna">
+					<ul class="columna_lista" >
+						<li>
+							<a aria-label="Volver al inicio" tabindex="0"  href="./index.html">INICIO</a>
+						</li>
+						<li>
+							<a aria-label="Ir a la historia del instituto" tabindex="0" href="./html/institucion.html">INSTITUCIÓN</a>
+						</li>
+						<li>
+							<a aria-label="Ir a admisiones" tabindex="0" href="./html/admisiones.html">ADMISIONES</a>
+						</li>
+					</ul>
+				</div>
+				<div class="footer-container-columna">
+					<iframe id="mapa_footer" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d822.4393026748972!2d-58.91866603866223!3d-34.458310501854854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc9cd2508e71f5%3A0xbd97a64e3bc14c2d!2sInstituto%20Almafuerte%20Primaria%2C%20Instituto%20Almafuerte%20Secundaria%2C%20Instituto%20Nuestra%20Se%C3%B1ora%20de%20F%C3%A1tima%20Secundaria!5e0!3m2!1ses!2sar!4v1681129032522!5m2!1ses!2sar" width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
+				<div class="footer-container-columna">
+					<ul class="columna_lista">
+						<li>
+							<a aria-label="Ir a contacto" tabindex="0" href="./html/contacto.html">CONTACTO</a>
+						</li>
+						<li>
+							<a aria-label="Ir a la plataforma" tabindex="0" href="https://www.facebook.com/search/pages/?q=instituto%20almafuerte&sde=AbpW75ive6444ynNsPN35-ulI0tUrVnwTINieru9Zysq7EssAW9QNdxqgkECMwlGpeN7DPM8LUFBib-VShJrSY3S" target="_blank">NOTICIAS</a>
+						</li>
+						<li>
+							<a aria-label="Ir a la plataforma schoology" tabindex="0" href="https://app.schoology.com/login?destination=home" target="_blank">SCHOOLOGY</a>
+						</li>
+					</ul>
 				</div>
 			</div>
-			<hr>
-			<div class="texto-footer-azul">
-				<p>"No te des por vencido, ni aun vencido"</p>
-			</div>
 		</section>
+		<hr>
+		<div id="texto-footer-azul">
+			<p>"No te des por vencido, ni aun vencido"</p>
+		</div>
 		<!-- Footer negro -->
 		<footer>
       		<p>© 2024 Instituto Almafuerte, Todoslos derechos reservados.</p>
