--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
 				<div class="container-informacion">
 					<div id="informacion-hero">
 						<h1>INSTITUTO ALMAFUERTE</h1>
-						<p>COLEGIO LAICO
-						NIVEL SECUNDARIO
-						PROFESORES Y PRECEPTORES CAPACITADOS
-						ASOCIACION COOPERADORA</p>
+						<p>El instituto almafuerte es el primer colegio
+							secundario de Pilar fundado el 20 de abril de 1953.
+							Una institución laica, con profesores/preceptores
+							capacitados y a cargo de una asociación cooperadora. 
+						</p>
 					</div>
 					<div id="estatua-almafuerte">
 						<img alt="Foto Estatua Almafuerte" src="./img/pedro-palacios.webp">
@@ -58,34 +59,34 @@
 			</div>
 		<!-- Seccion ¿POR QUE ELEGIRNOS? -->
 		<section class="seccion-elegirnos">
-			<div id="texto-elegirnos">
-				<h2>¿POR QUÉ ELEGIRNOS?</h2>
-			</div>
-			<div class="container text-center">
-				<div class="row">
-					<!-- Motivo 1 -->
-					<div class="columna col-12 col-md-4">
-						<i class="bi bi-person-fill-up"></i>
-						<p class="elegirnos-titulo">VALORES</p>
-						<p>Buscamos fomentar la participación activa, la responsabilidad, el compromiso y la búsqueda del bien común, promoviendo la cooperación y rechazando toda forma de discriminación. Además, valoramos y respetamos las diferencias entre las personas.</p>
-					</div>
-					<!-- Motivo 2 -->
-					<div class="columna col-12 col-md-4">
-						<i class="bi bi-people-fill"></i>
-						<p class="elegirnos-titulo">ESTUDIANTES</p>
-						<p>Asumimos el compromiso en la formación educativa de los estudiantes y de esta forma garantizamos el desarrollo integral de éstos. implementando propuestas pedagógicas que atiendan la diversidad de los estudiantes y las nuevas exigencias de nuestro tiempo.</p>
-					</div>
-					<!-- Motivo 3 -->
-					<div class="columna col-12 col-md-4">
-						<i class="bi bi-briefcase-fill"></i>
-						<p class="elegirnos-titulo">PROYECTOS</p>
-						<p>Adaptamos la educación a la diversidad de los estudiantes y a las nuevas exigencias de la sociedad, fomentando valores como el respeto y la solidaridad a través de la participación activa en la resolución de problemas para una convivencia democrática responsable.</p>
+				<div id="elegirnos-titulo">
+					<h2>¿Por qué elegirnos?</h2>
+				</div>
+				<div class="container-items">
+					<div class="container-items-row">
+						<!-- Motivo 1 -->
+						<div class="item-elegirnos">
+							<i class="bi bi-person-fill-up"></i>
+							<p class="elegirnos-titulo">VALORES</p>
+							<p>Buscamos fomentar la participación activa, la responsabilidad, el compromiso y la búsqueda del bien común, promoviendo la cooperación y rechazando toda forma de discriminación. Además, valoramos y respetamos las diferencias entre las personas.</p>
+						</div>
+						<!-- Motivo 2 -->
+						<div class="item-elegirnos">
+							<i class="bi bi-people-fill"></i>
+							<p class="elegirnos-titulo">ESTUDIANTES</p>
+							<p>Asumimos el compromiso en la formación educativa de los estudiantes y de esta forma garantizamos el desarrollo integral de éstos. implementando propuestas pedagógicas que atiendan la diversidad de los estudiantes y las nuevas exigencias de nuestro tiempo.</p>
+						</div>
+						<!-- Motivo 3 -->
+						<div class="item-elegirnos">
+							<i class="bi bi-briefcase-fill"></i>
+							<p class="elegirnos-titulo">PROYECTOS</p>
+							<p>Adaptamos la educación a la diversidad de los estudiantes y a las nuevas exigencias de la sociedad, fomentando valores como el respeto y la solidaridad a través de la participación activa en la resolución de problemas para una convivencia democrática responsable.</p>
+						</div>
 					</div>
 				</div>
-			<div>
 		</section>
 		<!--Seccion-->
-		<section>
+		<section class="container-seccion-noticias">
 			<div id="texto-noticias">
 				<p>NOTICIAS</p>
 			</div>
@@ -146,7 +147,7 @@
 		</div>
 		<!-- Footer negro -->
 		<footer>
-      		<p>© 2024 Instituto Almafuerte, Todoslos derechos reservados.</p>
+      		<p>© 2024 Instituto Almafuerte, Todos los derechos reservados.</p>
 		</footer>
 </body>
 </html>
