contacto, admisiones, institución casi

--- a/pages/admisiones.html
+++ b/pages/admisiones.html
@@ -58,15 +58,17 @@
 	</header>
 	<!--Seccion HERO-->
 	<main>
-		<h1 class="titulos">ADMISIONES</h1>
-		<div class="textos">
-			<span>
-				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime ipsam enim dicta distinctio possimus similique voluptatibus mollitia architecto officiis ullam laborum corporis veniam porro dolorem sapiente, nesciunt facilis maiores minus!
-			</span>
-			<span>
-				Para conocer mas información acercarse a la institución o enviar un correo por la seccion de contacto.
-			</span>
-		</div>
+		<section class="seccion-textos">
+			<h1 class="titulos">ADMISIONES</h1>
+			<div class="textos">
+				<span>
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime ipsam enim dicta distinctio possimus similique voluptatibus mollitia architecto officiis ullam laborum corporis veniam porro dolorem sapiente, nesciunt facilis maiores minus!
+				</span>
+				<span>
+					Para conocer mas información acercarse a la institución o enviar un correo por la seccion de contacto.
+				</span>
+			</div>
+		</section>
 	</main>
 	<!-- FOOTER -->
 	<footer>
