--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,9 +58,8 @@
 	</header>
 	<!--Seccion HERO-->
 	<main>
-		<section>
-			<h1 class="titulos"></h1>
-			<p class="subtitulos">SECRETARÍA</p>
+		<section class="seccion-textos">
+			<h1 class="titulos">SECRETARÍA</h1>
 				<span class="textos">
 					Hemos creado una sección de contacto para brindarle un canal directo de comunicación con nosotros. Si tiene alguna duda, consulta o propuesta, estamos aquí para escucharlo y brindarle el apoyo que necesita.
 				</span>
@@ -72,7 +71,7 @@
 				</span>
 		</section>
 		<!-- Boton de correo -->
-		<section>
+		<section class="seccion-boton">
 			<a href="mailto:Almafuertesecundariaconsultas@gmail.com">
 				<button type="button">ENVIAR UN CORREO</button>
 			</a>
