--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
 	<main>
 		<!-- PRESENTACIÓN -->
 		<section id="presentation">
-			<h1>INSTITUTO ALMAFUERTE</h1>
+			<h1>INSTITUTO ALMAFUERTE PILAR</h1>
 			<span>
-				Bienvenidos al Instituto Almafuerte, el primer colegio de Pilar, que se destaca por su compromiso con una educación laica de calidad, tanto en el nivel primario como en el secundario. Fundado con la misión de brindar un espacio educativo inclusivo y pluralista, nuestro instituto se ha convertido en un referente en la comunidad.
+				Bienvenidos al Instituto Almafuerte, el <b>primer colegio secundario</b> de Pilar, que se destaca por su compromiso con una educación laica de calidad, tanto en el nivel primario como en el secundario. Fundado con la misión de brindar un espacio educativo inclusivo y pluralista, nuestro instituto se ha convertido en un referente en la comunidad.
 			</span>
 			<span>
-				El Instituto Almafuerte es gestionado por una organización cooperadora, lo que nos permite fomentar la participación activa de padres, docentes y alumnos en la vida escolar. Esta estructura nos ayuda a construir un ambiente colaborativo y enriquecedor, donde cada voz cuenta y se trabaja en conjunto para el bienestar de nuestros estudiantes.
+				El Instituto Almafuerte es gestionado por una organización cooperadora, lo que nos permite fomentar la <b>participación activa de padres, docentes y alumnos en la vida escolar</b>. Esta estructura nos ayuda a construir un ambiente colaborativo y enriquecedor, donde cada voz cuenta y se trabaja en conjunto para el bienestar de nuestros estudiantes.
 			</span>
 			<span>
-				Nos enorgullece ofrecer un enfoque educativo integral, que promueve no solo el desarrollo académico, sino también la formación de valores, habilidades sociales y el pensamiento crítico. Nuestro equipo docente, comprometido y apasionado, está dedicado a guiar a cada alumno en su proceso de aprendizaje, brindando las herramientas necesarias para que se conviertan en ciudadanos responsables y comprometidos con su entorno.
+				Nos enorgullece ofrecer un enfoque educativo integral, que promueve no solo el desarrollo académico, sino también la formación de valores, habilidades sociales y el pensamiento crítico. Nuestro equipo docente, comprometido y apasionado, está <b>dedicado a guiar a cada alumno en su proceso de aprendizaje</b>, brindando las herramientas necesarias para que se conviertan en ciudadanos responsables y comprometidos con su entorno.
 			</span>
 				<button aria-label="Ir a video presentación">CONOCER MÁS</button>
 		</section>
@@ -83,7 +83,7 @@
 			</div>
 		</section>
 		<!-- PORQUÉ ELEGIRNOS -->
-		 <section id="elegirnos">
+		<section id="elegirnos">
 			<div id="eleg-texto">
 				<h2>¿POR QUÉ ELEGIRNOS?</h2>
 				<span>
@@ -134,15 +134,19 @@
 					</span>
 				</div>
 			</div>
-		 </section>
-		 <!-- VIDEO -->
-		 <section id="video">
-			<p>pepe</p>
-		 </section>
-		 <!-- NOTICIAS-->
-		 <section id="news">
-			<p>pepe</p>
-		 </section>
+		</section>
+		<!-- NOTICIAS-->
+		<section id="news">
+			<h3>NOTICIAS</h3>
+			<span>
+				Bienvenidos a nuestra sección de noticias, donde encontrarás las últimas novedades sobre el Instituto, nuestras actividades extracurriculares y efemérides.
+				Aquí compartimos eventos especiales, jornadas académicas y celebraciones que enriquecen nuestra comunidad. Desde ferias de ciencias hasta actividades culturales, cada ocasión es una oportunidad para que nuestros estudiantes brillen.
+			</span>
+		</section>
+		<!-- VIDEO -->
+		<section id="video">
+			<h4>VIDEO PRESENTACIÓN ACÁ</h4>
+		</section>
 	</main>		
 	<!-- FOOTER -->
 	 <footer>
@@ -175,7 +179,7 @@
 		<div id="text-footer">
 			<div>
 				<p>© Instituto Almafuerte 1953 - Creado por E. Pistone & P. Pinto</p>
-				<button> ARRIBA</button>
+				<button><i class="bi bi-arrow-up-circle-fill"></i></button>
 			</div>
 		</div>
 	 </footer>
