fix text institución & logos

--- a/pages/institucion.html
+++ b/pages/institucion.html
@@ -79,19 +79,19 @@
 			</span>
 			<!-- ESCUDOS -->
 			<p class="subtitulos">ESCUDOS</p>
-			<div>
+			<div id="escudos">
 				<!-- 1er ESCUDO -->
-				<div>
-					<img src="../img/primer-escudo.png" alt="escudo 1953-2017">
+				<div class="escudos-col">
+					<img src="../img/logo-original.png" alt="escudo 1953-2017">
 				  	<p>1953-2017</p>
 				</div>
 				<!-- 2do ESCUDO -->
-				<div>
+				<div class="escudos-col">
 					<img src="../img/Escudo2017.png" alt="escudo de alumnos">
 					<p>2017</p>	
 				</div>
 				<!-- 3er ESCUDO -->
-				<div>
+				<div class="escudos-col">
 					<img src="../img/escudo2017-2020.png" alt=" escudo 2017-2020">
 					<p>2017-2020</p>
 				</div>
@@ -216,7 +216,7 @@
 				• KIOSCO: Poseemos un espacio dentro de la institución destindo a satisfacer las necesidades
 				tanto alimentarias como escolares de los alumnos.
 			</span>
-			<span>
+			<span class="textos">
 				• EDUCACIÓN FíSICA: Se utiliza el Gym de la escuela (frente al edificio secundaria). 
 				Cuentan con preceptor para sus ingresos y salidas. Las clases son en contratumo 
 				-por la mañana-, dos horas semanales. 
