inde -> elerginos & noticias

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 				Bienvenidos al Instituto Almafuerte, el <b>primer colegio secundario</b> de Pilar, que se destaca por su compromiso con una educación laica de calidad, tanto en el nivel primario como en el secundario. Fundado con la misión de brindar un espacio educativo inclusivo y pluralista, nuestro instituto se ha convertido en un referente en la comunidad.
 			</span>
 			<span>
-				El Instituto Almafuerte es gestionado por una organización cooperadora, lo que nos permite fomentar la <b>participación activa de padres, docentes y alumnos en la vida escolar</b>. Esta estructura nos ayuda a construir un ambiente colaborativo y enriquecedor, donde cada voz cuenta y se trabaja en conjunto para el bienestar de nuestros estudiantes.
+				El Instituto Almafuerte es gestionado por una organización cooperadora, lo que nos permite fomentar la participación activa de padres, docentes y alumnos en la vida escolar. Esta estructura nos ayuda a construir un ambiente colaborativo y enriquecedor, donde cada voz cuenta y se trabaja en conjunto para el bienestar de nuestros estudiantes.
 			</span>
 			<span>
-				Nos enorgullece ofrecer un enfoque educativo integral, que promueve no solo el desarrollo académico, sino también la formación de valores, habilidades sociales y el pensamiento crítico. Nuestro equipo docente, comprometido y apasionado, está <b>dedicado a guiar a cada alumno en su proceso de aprendizaje</b>, brindando las herramientas necesarias para que se conviertan en ciudadanos responsables y comprometidos con su entorno.
+				Nos enorgullece ofrecer un enfoque educativo integral, que promueve no solo el desarrollo académico, sino también la formación de valores, habilidades sociales y el pensamiento crítico. Nuestro equipo docente, comprometido y apasionado, está dedicado a guiar a cada alumno en su proceso de aprendizaje, brindando las herramientas necesarias para que se conviertan en ciudadanos responsables y comprometidos con su entorno.
 			</span>
 				<button aria-label="Ir a video presentación">CONOCER MÁS</button>
 		</section>
@@ -92,45 +92,45 @@
 			</div>
 			<div id="eleg-cont">
 				<div class="contenedores">
-					<i></i>
+					<i class="bi bi-tree-fill"></i>
 					<p>DEPORTES</p>
 					<span>
-						TEXTO
+						Los estudiantes tienen la oportunidad de practicar voleibol y baloncesto, además de participar en otras actividades deportivas que fomentan la salud y la diversión.
 					</span>
 				</div>
 				<div class="contenedores">
-					<i></i>
+					<i class="bi bi-pc-display"></i>
 					<p>INFORMÁTICA</p>
 					<span>
-						TEXTO
+						La informática es una parte fundamental del aprendizaje. En la sala de computadoras, nos enfocamos en la ofimática, donde los estudiantes desarrollan habilidades clave en administración y organización.
 					</span>
 				</div>
 				<div class="contenedores">
-					<i></i>
+					<i class="bi bi-book-half"></i>
 					<p>INGLÉS</p>
 					<span>
-						TEXTO
+						En nuestra escuela, el aprendizaje del inglés es una prioridad en todos los niveles. Desde los más pequeños hasta los egresados.
 					</span>
 				</div>
 				<div class="contenedores">
-					<i></i>
+					<i class="bi bi-device-ssd-fill"></i>
 					<p>ELECTRÓNICA</p>
 					<span>
-						TEXTO
+						Materia apasionante que permite a los estudiantes aprender a través de proyectos reales. Desde la construcción de circuitos básicos hasta el desarrollo de dispositivos más complejos.
 					</span>
 				</div>
 				<div class="contenedores">
-					<i></i>
-					<p>VARIOS</p>
+					<i class="bi bi-palette-fill"></i>
+					<p>ARTE</p>
 					<span>
-						TEXTO
+						A través de clases creativas y prácticas, los estudiantes exploran distintas técnicas y estilos, desarrollando su sensibilidad estética y su capacidad de expresión.
 					</span>
 				</div>
 				<div class="contenedores">
-					<i></i>
-					<p>VARIOS</p>
+					<i class="bi bi-briefcase-fill"></i>
+					<p>EXTRACURRICULARES</p>
 					<span>
-						TEXTO
+						Complementamos el aprendizaje académico con una variedad de actividades extracurriculares que enriquecen la experiencia educativa.
 					</span>
 				</div>
 			</div>
@@ -142,10 +142,19 @@
 				Bienvenidos a nuestra sección de noticias, donde encontrarás las últimas novedades sobre el Instituto, nuestras actividades extracurriculares y efemérides.
 				Aquí compartimos eventos especiales, jornadas académicas y celebraciones que enriquecen nuestra comunidad. Desde ferias de ciencias hasta actividades culturales, cada ocasión es una oportunidad para que nuestros estudiantes brillen.
 			</span>
+			<div id="imagenes">
+				<div>
+					<img id="imagen-grande" alt="Imágen grande de acto 70 años" src="./img/70-acto.webp">
+				</div>
+				<div id="imagenes-pequeñas">
+					<img alt="1er imágen pequeña sobre... " src="./img/70-promo23.webp">
+					<img alt="2da imágen pequeña sobre... " src="./img/70-laureles.webp">
+				</div>
+			</div>
 		</section>
 		<!-- VIDEO -->
 		<section id="video">
-			<h4>VIDEO PRESENTACIÓN ACÁ</h4>
+			<iframe width="750" height="455" src="https://www.youtube-nocookie.com/embed/nx_7tJuAuUg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		</section>
 	</main>		
 	<!-- FOOTER -->
