--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -71,10 +71,24 @@
 				</span>
 		</section>
 		<!-- Boton de correo -->
-		<section class="seccion-boton">
-			<a href="mailto:Almafuertesecundariaconsultas@gmail.com">
-				<button type="button">ENVIAR UN CORREO</button>
-			</a>
+		<section class="metodos-contacto">
+			<div>
+				<span>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, minima temporibus, obcaecati at enim sapiente quidem suscipit maxime perferendis officiis sit et ut corporis iure perspiciatis blanditiis cupiditate tenetur laudantium.
+				</span>
+				<span>
+					whatsapp: 011-3312-3451
+					tel: 0230-2341-4631
+				</span>
+			</div>
+			<div>
+				<span>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque in iste labore consequuntur, officiis natus mollitia sint sapiente eos earum atque voluptas cum adipisci dicta ea! Dolorem aliquid inventore earum?
+				</span>
+				<a href="mailto:Almafuertesecundariaconsultas@gmail.com">
+					<button>ENVIAR UN CORREO</button>
+				</a>
+			</div>
 		</section>
 	</main>
 	<!-- FOOTER -->
