--- a/pages/institucion.html
+++ b/pages/institucion.html
@@ -70,9 +70,12 @@
 				Ceberio y Miguel Morcella decidieron poner manos a la obra para cumplir el sueño de fundar un 
 				establecimiento educativo en el distrito. Así fue como el 20 abril de 1953 ese sueño se concreta y 
 				desde ese año hasta la actualidad funciona en el mismo edificio, ubicándose en calle Hipólito 
-				Yrigoyen 890. Tres años después se amplía e inicia el Nivel Primario. 
+				Yrigoyen 890. 
+			</span>
+			<span class="textos">
+				Tres años después se amplía e inicia el Nivel Primario. 
 				En sus comienzos la escuela se llamó "Instituto Adscripto Mixto Gratuito de Enseñanza 
-				Secundaria•, en 1965 nace el nombre actual -Almafuerte- votado por sus alumnos. 
+				Secundaria, en 1965 nace el nombre actual -Almafuerte- votado por sus alumnos. 
 				Pasarían algunos años hasta la creación de la Asociación Cooperadora de Padres, con la 
 				colaboración de comerciantes, vecinos y ex alumnos que en 1978 comienzan a hacerse cargo de la 
 				escuela.
@@ -186,9 +189,6 @@
 				herramientas de trabajo en equipo y orientación vocacional. Para de este modo, acercar a 
 				nuestro estudiante a la elección de su futura vocación profesional y/o laboral.
 			</span>
-		</section>
-		<!-- NOVEDADES -->
-		<section class="seccion-textos">
 			<p class="subtitulos"></p>
 			<span class="textos">
 				La escuela cuenta con una plataforma propia "Tinta Fresca" - Schoology- con la cual 
@@ -205,6 +205,7 @@
 				las diferentes áreas no como compartimentos estancos e inflexibles, sino como parte de la 
 				formación general. 
 			</span>
+		</section>
 		</section>
 		<!-- HORARIOS -->
 		<section class="seccion-textos">
