--- a/pages/admisiones.html
+++ b/pages/admisiones.html
@@ -60,14 +60,12 @@
 	<main>
 		<section class="seccion-textos">
 			<h1 class="titulos">ADMISIONES</h1>
-			<div class="textos">
-				<span>
-					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime ipsam enim dicta distinctio possimus similique voluptatibus mollitia architecto officiis ullam laborum corporis veniam porro dolorem sapiente, nesciunt facilis maiores minus!
+				<span class="textos">
+					Las inscripciones para nuestra escuela por lo general se suelen abrir a fin del ciclo lectivo y su misma se menciona por este medio al igual que toda la información necesaria se encuentra disponible en la cartelera ubicada en la entrada de la institución. Te invitamos a acercarte para consultar los requisitos, fechas y procedimientos. Si tienes alguna pregunta, no dudes en contactarnos. ¡Esperamos verte pronto!
 				</span>
-				<span>
+				<span class="textos">
 					Para conocer mas información acercarse a la institución o enviar un correo por la seccion de contacto.
 				</span>
-			</div>
 		</section>
 	</main>
 	<!-- FOOTER -->
