--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<i class="bi bi-device-ssd-fill"></i>
 					<p>ELECTRÓNICA</p>
 					<span>
-						Materia apasionante que permite a los estudiantes aprender a través de proyectos reales. Desde la construcción de circuitos básicos hasta el desarrollo de dispositivos más complejos.
+						Construcción de circuitos básicos hasta desarrollo de dispositivos complejos.
 					</span>
 				</div>
 				<div class="contenedores">
@@ -137,7 +137,7 @@
 		</section>
 		<!-- NOTICIAS-->
 		<section id="news">
-			<h3>NOTICIAS</h3>
+			<h3>NOVEDADES</h3>
 			<span>
 				Bienvenidos a nuestra sección de noticias, donde encontrarás las últimas novedades sobre el Instituto, nuestras actividades extracurriculares y efemérides.
 				Aquí compartimos eventos especiales, jornadas académicas y celebraciones que enriquecen nuestra comunidad. Desde ferias de ciencias hasta actividades culturales, cada ocasión es una oportunidad para que nuestros estudiantes brillen.
@@ -154,7 +154,7 @@
 		</section>
 		<!-- VIDEO -->
 		<section id="video">
-			<iframe width="750" height="455" src="https://www.youtube-nocookie.com/embed/nx_7tJuAuUg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			<iframe width="650" height="355" src="https://www.youtube-nocookie.com/embed/nx_7tJuAuUg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		</section>
 	</main>		
 	<!-- FOOTER -->
