--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -71,19 +71,21 @@
 				</span>
 		</section>
 		<!-- Boton de correo -->
-		<section class="metodos-contacto">
-			<div>
+		<section id="metodos-contacto">
+			<div class="contacto-contenedor">
+				<p>TELÉFONO</p>
 				<span>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, minima temporibus, obcaecati at enim sapiente quidem suscipit maxime perferendis officiis sit et ut corporis iure perspiciatis blanditiis cupiditate tenetur laudantium.
+					Este número está disponible para resolver pequeñas dudas sobre trámites e inscripciones. Si necesitas información sobre el proceso o requisitos, no dudes en llamarnos. ¡Estamos aquí para ayudarte!
 				</span>
 				<span>
-					whatsapp: 011-3312-3451
-					tel: 0230-2341-4631
+					WHATSAPP: 011-3312-3451<br>
+					TELÉFONO: 0230-2341-4631
 				</span>
 			</div>
-			<div>
+			<div class="contacto-contenedor">
+				<p>CORREO ELECTRÓNICO</p>
 				<span>
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque in iste labore consequuntur, officiis natus mollitia sint sapiente eos earum atque voluptas cum adipisci dicta ea! Dolorem aliquid inventore earum?
+					Este correo es para resolver pequeñas dudas sobre trámites e inscripciones. Si tienes preguntas sobre el proceso o requisitos, no dudes en consultarnos. ¡Estamos aquí para ayudarte!
 				</span>
 				<a href="mailto:Almafuertesecundariaconsultas@gmail.com">
 					<button>ENVIAR UN CORREO</button>
