--- a/index.html
+++ b/index.html
@@ -184,9 +184,11 @@
 		<div id="text-footer">
 			<div>
 				<p>© Instituto Almafuerte 1953 - Creado por E. Pistone & P. Pinto</p>
-				<button><i class="bi bi-arrow-up-circle-fill"></i></button>
+				<button id="btn-footer"><i class="bi bi-arrow-up-circle-fill"></i></button>
 			</div>
 		</div>
 	 </footer>
+	 <!-- JAVASCRIPT -->
+	<script src="./main.js"></script>
 </body>
 </html>
